[gd_scene load_steps=7 format=3 uid="uid://b8fg45slly116"]

[ext_resource type="Texture2D" uid="uid://cwdw0dy41qgvt" path="res://ui/menus/tree_menu/tree_card.png" id="1_wbhwn"]
[ext_resource type="Script" uid="uid://dxwbpi670nhxn" path="res://ui/menus/tree_menu/tree_card.gd" id="2_hkimi"]
[ext_resource type="FontFile" uid="uid://bygvev32r70qk" path="res://ui/fonts/monogram/monogram.ttf" id="3_db0qj"]
[ext_resource type="Texture2D" uid="uid://cfmwrqmgxvuq6" path="res://ui/menus/tree_menu/icons/default_tree.png" id="3_gytjr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hkimi"]
atlas = ExtResource("1_wbhwn")
region = Rect2(48, 32, 96, 124)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_db0qj"]

[node name="TreeCard" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 96.0
offset_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
script = ExtResource("2_hkimi")
texture = ExtResource("3_gytjr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_hkimi")

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 12.0
offset_right = 32.0
offset_bottom = 140.0
grow_horizontal = 2
texture = ExtResource("3_gytjr")
stretch_mode = 3

[node name="WaterPlus" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 48.0
offset_top = 158.0
offset_right = 88.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "5"

[node name="SunPlus" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.448
anchor_top = 0.621
anchor_right = 0.698
anchor_bottom = 0.718
offset_left = -0.00800323
offset_top = -0.00400543
offset_right = -0.00800323
offset_bottom = -0.0320053
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NutrientsPlus" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.708
anchor_top = 0.621
anchor_right = 0.958
anchor_bottom = 0.718
offset_left = 0.0319977
offset_top = -0.00400543
offset_right = 0.0319977
offset_bottom = -0.0320053
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaterMin" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.726
anchor_right = 0.437
anchor_bottom = 0.823
offset_left = 0.0480003
offset_top = -0.0240021
offset_right = 0.0480003
offset_bottom = -0.052002
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SunMin" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.448
anchor_top = 0.726
anchor_right = 0.698
anchor_bottom = 0.823
offset_left = -0.00800323
offset_top = -0.0240021
offset_right = -0.00800323
offset_bottom = -0.052002
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NutrientsMin" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.708
anchor_top = 0.726
anchor_right = 0.958
anchor_bottom = 0.823
offset_left = 0.0319977
offset_top = -0.0240021
offset_right = 0.0319977
offset_bottom = -0.052002
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Species" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.0242903
anchor_right = 0.958
anchor_bottom = 0.12129
offset_left = -0.0320005
offset_top = -0.012001
offset_right = 0.0319977
offset_bottom = -0.0400085
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "species"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 216.0
offset_right = 101.0
offset_bottom = 242.0
theme_override_fonts/font = ExtResource("3_db0qj")
theme_override_font_sizes/font_size = 32
text = "Cost: "

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_db0qj")
flat = true

[connection signal="mouse_entered" from="TextureRect/Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
